src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <label>Territory Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>JB</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KB</fullName>
                </value>
                <value>
                    <fullName>KL</fullName>
                </value>
                <value>
                    <fullName>LF</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>PG</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>WN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Group__c</fullName>
        <label>Tier Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Picture__c</fullName>
        <label>URL Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WF_Template_ID__c</fullName>
        <label>WF Template ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__BillingRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__RevenueRecognitionRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>RevenueRecognitionRuleProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>TaxRulesProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Counties_Per_MSA__c</fullName>
        <label># of Counties Per MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>767</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PaymentConnect Category this product is associated with.</description>
        <inlineHelpText>PaymentConnect Category this product is associated with.</inlineHelpText>
        <label>Category</label>
        <referenceTo>pymt__Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Image_Id__c</fullName>
        <description>Attach an image file to this record using the image upload widget to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</description>
        <inlineHelpText>Attach an image file to this record using the image upload widget to populate this field with an attachment Id. If a value has been set for the Image URL field, this value will be ignored.</inlineHelpText>
        <label>Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Image_URL__c</fullName>
        <description>Add or edit an image attachment to this record to make an image available for display on the website, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</description>
        <inlineHelpText>Add or edit an image attachment to this record to make an image available for display on the website, or override any image attachments by entering the URL of an image on another server here. Clear this field to use image attachments.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pymt__Image__c</fullName>
        <formula>IMAGE(BLANKVALUE(pymt__Image_URL__c,IF(ISBLANK(pymt__Image_Id__c),&apos;/s.gif&apos;,&apos;/servlet/servlet.FileDownload?file=&apos;+pymt__Image_Id__c)), &apos;Image&apos; ,60 ,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Inventory__c</fullName>
        <description>Number of items in stock</description>
        <inlineHelpText>Number of items in stock</inlineHelpText>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__On_Payment_Completed__c</fullName>
        <inlineHelpText>PaymentConnect Action to perform after this product has been paid for.</inlineHelpText>
        <label>On Payment Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Tangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the product is a physical product (ie requires shipping).</description>
        <inlineHelpText>Check if the product is a physical product (ie requires shipping).</inlineHelpText>
        <label>Tangible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is taxable.</description>
        <inlineHelpText>Check if the item is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Weight_Class__c</fullName>
        <label>Weight Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grams</fullName>
                </value>
                <value>
                    <fullName>Kilograms</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Ounces</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>temp_price__c</fullName>
        <label>temp_price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zProduct_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zProduct Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Allow_Feature_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if features in the product can be changed when creating QuoteProductFeatures</description>
        <inlineHelpText>If features in the product can be changed when creating QuoteProductFeatures</inlineHelpText>
        <label>Allow Feature Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillingEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Entity</label>
        <referenceTo>zqu__BillingEntity__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Catalog_Sync_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product link to catalog sync history</description>
        <inlineHelpText>Product link to catalog sync history</inlineHelpText>
        <label>Catalog Sync History</label>
        <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Products</fullName>
                </value>
                <value>
                    <fullName>Add On Services</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The Effective End Date of the Product.</description>
        <inlineHelpText>The Effective End Date of the Product.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The Effective Start Date of the Product.</description>
        <inlineHelpText>The Effective Start Date of the Product.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__BillingEntity__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SKU2__c</fullName>
        <description>The Product SKU.</description>
        <inlineHelpText>This field will be auto-generated if no value specified.</inlineHelpText>
        <label>SKU</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SKU__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The deprecated Product SKU field.</description>
        <inlineHelpText>This field will be auto-generated if no value specified.</inlineHelpText>
        <label>SKU (Deprecated)</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__SyncMessage__c</fullName>
        <description>Message for the Catalog Sync</description>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Product.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Product.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>DoubleClick_Product</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>DoubleClick Product</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_Intelligence_Product_View</fullName>
        <columns>Product__c</columns>
        <columns>Market_County__c</columns>
        <columns>Market_Type__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>Market Intelligence Product View</label>
    </listViews>
    <listViews>
        <fullName>Metrostudy</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Market_County__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MetroStudy_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Metrostudy</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2009_Market_Intelligence_Product_View2</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>List_Price__c</columns>
        <columns>Market_Type__c</columns>
        <columns>Billing_Schedule__c</columns>
        <columns>FIPS_Code__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>2009 Market Intelligence Product View</label>
    </listViews>
    <listViews>
        <fullName>pymt__Products_with_Images</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>pymt__Image__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>pymt__Inventory__c</columns>
        <columns>pymt__Tangible__c</columns>
        <columns>pymt__Taxable__c</columns>
        <columns>pymt__Weight__c</columns>
        <columns>pymt__Weight_Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pymt__Image_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>pymt__Image_URL__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Products with Images</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>AB2__Adbook_Product</fullName>
        <active>true</active>
        <label>AdBook Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meyers_Products</fullName>
        <active>true</active>
        <description>Used for Meyers Group product types.</description>
        <label>Meyers Products</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Include_or_Exclude_Maintenance</fullName>
        <active>true</active>
        <description>Validates that either Includes In Maintenance or Excludes From Maintenance checkbox is checked but not both.</description>
        <errorConditionFormula>AND(SBQQ__IncludeInMaintenance__c,SBQQ__ExcludeFromMaintenance__c)</errorConditionFormula>
        <errorMessage>You must check either Include In Maintenance or Exclude From Maintenance checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
        <active>true</active>
        <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
        <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>